@@ -7,6 +7,8 @@ git-annex (3.20111112) UNRELEASED; urgency=low
   * init: When run in an already initalized repository, and without
     a description specified, don't delete the old description. 
   * Optimised union merging; now only runs git cat-file once.
+  * status: Now displays trusted, untrusted, and semitrusted repositories
+    separately.
 
  -- Joey Hess <joeyh@debian.org>  Sat, 12 Nov 2011 14:50:21 -0400
 
